# cvm-ui-desktop-backgrounds

./: .gitignore  README.md  meson.build
backgrounds/: cvm-ui-desktop.xml.in  meson.build
debian/: changelog  control  control.in  copyright  files
